--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </br>
         </br>
 
-            <a href="https://github.com/Easy1089/Lemone-ProyectoFinal-2024-ISPC/tree/master/Proyecto%20Lemone%20web" class="btn-primary">Obtener en Google Play</a>
-            <a href="https://github.com/Easy1089/Lemone-ProyectoFinal-2024-ISPC/tree/master/Proyecto%20Lemone%20Mobile" class="btn-secondary">Explorar la plataforma</a>
+            <a href="https://github.com/Easy1089/Lemone-ProyectoFinal-2024-ISPC/tree/master/Proyecto%20Lemone%20web" class="btn-primary">Explorar la plataforma</a>
+            <a href="https://github.com/Easy1089/Lemone-ProyectoFinal-2024-ISPC/tree/master/Proyecto%20Lemone%20Mobile" class="btn-secondary">Obtener en Google Play</a>
 
         </br>
         </br>    
